add:添加点击获取坐标功能页面

--- a/index.html
+++ b/index.html
@@ -12,12 +12,24 @@
       <p>用于获取自定义多边形区域坐标</p>
     </a>
   </div>
+  <div class="box">
+    <a href="./src/Marken/index.html">
+      <h3>点击获取坐标</h3>
+      <p>获取点击地区的左标，并自动复制</p>
+    </a>
+  </div>
+  <div class="box">
+      <a href="./src/Servicer/index.html">
+      <h3>设置路线规划</h3>
+      <p>设置路线规划demo</p>
+    </a>
+  </div>
 </body>
   <style>
     html,body{border:0;margin:0;}
-    body{padding:20px;}
+    body{padding:20px;margin-top:80px}
     div{overflow:hidden;}
-    .box{width:50%;float:left;}
+    .box{width:33.3%;float:left;}
     .box a{background: #5a4c4c;
     display: block;
     overflow: hidden;
