--- a/src/Servicer/index.html
+++ b/src/Servicer/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cache.amap.com/lbs/static/main1119.css"/>
     <script src="https://webapi.amap.com/maps?v=1.4.4&key=你的key&plugin=AMap.PolyEditor"></script>
 <!--     <script type="text/javascript" src="https://cache.amap.com/lbs/static/addToolbar.js"></script> -->
-    <script src="https://lib.sinaapp.com/js/jquery/2.2.4/jquery-2.2.4.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="http://libs.baidu.com/jquery/2.1.4/jquery.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="https://a.amap.com/jsapi_demos/static/demo-center/js/demoutils.js"></script>
     <style type="text/css" media="screen">
 input::-webkit-input-placeholder,textarea::-webkit-input-placeholder{ 
