bug:修改jq的http协议及错误字节

--- a/src/Servicer/index.html
+++ b/src/Servicer/index.html
@@ -6,10 +6,8 @@
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
   <title>高德规划折线区域</title>
   <link rel="stylesheet" href="https://cache.amap.com/lbs/static/main1119.css"/>
-
   <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=<你的key>&plugin=AMap.Autocomplete"></script>
-
-  <script src="http://libs.baidu.com/jquery/2.1.4/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="https://libs.baidu.com/jquery/2.1.4/jquery.min.js" type="text/javascript" charset="utf-8"></script>
   <script src="https://a.amap.com/jsapi_demos/static/demo-center/js/demoutils.js"></script>
   <style type="text/css" media="screen">
 input::-webkit-input-placeholder,textarea::-webkit-input-placeholder{ 
@@ -179,8 +177,7 @@ ul.tabs.dir_tab li a.current {
   background-image: url(https://www.amap.com/assets/img/sug_icons.png);
   background-position: -2px -120px;
 }
-  </style>
-}
+</style>
 </head>
 <body>
 <input id="string" type="text" value="" style="display:none">
