bug:统一JQ文件的http协议

--- a/src/Marken/index.html
+++ b/src/Marken/index.html
@@ -7,7 +7,7 @@
     <title>点击获取坐标</title>
     <link rel="stylesheet" href="https://cache.amap.com/lbs/static/main1119.css"/>
     <script src="https://webapi.amap.com/maps?v=1.4.4&key=你的key&plugin=AMap.PolyEditor"></script>
-    <script src="http://libs.baidu.com/jquery/2.1.4/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="https://libs.baidu.com/jquery/2.1.4/jquery.min.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
 <input id="string" type="text" value="" style="display: block;position: absolute;z-index: 999;">
