--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
     </a>
   </div>
   <div class="box">
+      <a href="./src/Echarts/index.html">
+      <h3>设置中国地图</h3>
+      <p>根据数据设置中国地图的颜色</p>
+    </a>
+  </div>
+  <div class="box">
       <a href="./src/Servicer/index.html">
       <h3>设置路线规划</h3>
       <p>设置路线规划demo</p>
