--- a/index.html
+++ b/index.html
@@ -19,15 +19,22 @@
     </a>
   </div>
   <div class="box">
-      <a href="./src/Echarts/index.html">
+      <a href="./src/Servicer/index.html">
+      <h3>设置路线规划</h3>
+      <p>设置路线规划demo</p>
+    </a>
+  </div>
+  <hr/>
+  <div class="box">
+      <a href="./src/Echarts/China.html">
       <h3>设置中国地图</h3>
       <p>根据数据设置中国地图的颜色</p>
     </a>
   </div>
   <div class="box">
-      <a href="./src/Servicer/index.html">
-      <h3>设置路线规划</h3>
-      <p>设置路线规划demo</p>
+      <a href="./src/Echarts/Unequal.html">
+      <h3>不等距折线图</h3>
+      <p>设置X轴不等距离的时间轴显示</p>
     </a>
   </div>
 </body>
